# geordi

./: .gitignore  AGENTS.md  BACKLOG.md  BEARING.md  CHANGELOG.md  CLAUDE-THOUGHTS.md  Cargo.toml  LICENSE  README.md  VISION.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.eslint.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/geordi-ir/: Cargo.toml
crates/geordi-ir/src/: lib.rs
crates/geordi-mesh/: Cargo.toml
crates/geordi-mesh/src/: lib.rs
crates/geordi-renderer/: Cargo.toml
crates/geordi-renderer/src/: lib.rs
docs/: ARCHITECTURE.md  ARCHIVE_CANDIDATES.md  ERROR_CODES.md  PRONUNCIATION.md  RUST_GATES.md  STATUS.md  V0_DESIGN_LAWS.md  end-to-end.md  render-everywhere.md
docs/design/: 2026-05-browser-render-harness.md  2026-05-bunny-bounds-normalization-law.md  2026-05-bunny-camera-law.md  2026-05-bunny-matrix-vector-law.md  2026-05-bunny-mesh-asset-contract.md  2026-05-bunny-mesh-render-everywhere.md  2026-05-bunny-mesh-slice-plan.md  2026-05-bunny-projection-law.md  2026-05-bunny-transform-playback-law.md  2026-05-compiler-test-hardening.md  2026-05-feature-registry-runtime-capabilities.md  2026-05-glyph-tooling-spike.md  2026-05-gpvue-render-fixture-pipeline.md  2026-05-native-rust-render-harness.md  2026-05-operating-docs-and-pr-gates.md  2026-05-render-everywhere-demo.md  2026-05-render-everywhere-slice-plan.md  2026-05-strict-positioned-glyph-run-dag.dot  2026-05-strict-positioned-glyph-run-plan.md  2026-05-strict-text-font-profile.md  2026-05-strict-text-remaining-slices-prd-test-plan.md  2026-05-typescript-rust-wasm-boundary.md  2026-05-wesley-common-type-generation.md  2026-06-bunny-geordi-interop.md  2026-06-portable-bijou-ui-render-endpoints.md  README.md
examples/browser-render-everywhere/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
examples/browser-render-everywhere/src/: browserRenderSmoke.test.ts  browserRenderSmoke.ts  bunnyAssets.ts  bunnyRender.test.ts  bunnyRender.ts  domShell.ts  fixtureAssets.ts  harnessModel.test.ts  harnessModel.ts  main.ts  strictTextAssets.ts  strictTextRender.ts  style.css
examples/browser-render-everywhere/test/: browserRenderEverywhere.e2e.ts
examples/native-render-everywhere/: Cargo.toml  README.md
examples/native-render-everywhere/src/: bunny.rs  main.rs
fixtures/render-everywhere/assets/fonts/: README.md  font-pack.geordi.json  font-pack.geordi.json.receipt  font-pack.schema.md
fixtures/render-everywhere/assets/fonts/failures/: README.md  absolute-path.font-pack.geordi.json  bad-hash.font-pack.geordi.json  duplicate-id.font-pack.geordi.json  unsupported-format.font-pack.geordi.json
fixtures/render-everywhere/assets/fonts/lato/: SELECTION.md
fixtures/render-everywhere/assets/stanford-bunny/: README.md  STANFORD_RECONSTRUCTION_README.txt  bunny.fixture.json  bunny.math-vectors.json  bunny.mesh.json
fixtures/render-everywhere/assets/utah-teapot/: README.md
fixtures/render-everywhere/hello-panel/: README.md  fixture.json  scene.geordi.json  scene.geordi.json.receipt  source.gpvue
fixtures/render-everywhere/strict-text/: README.md  generated-shaped-output.schema.md  geordi.outline-evidence.geordi.json  geordi.probe-policy.geordi.json  geordi.strict-text.geordi.json  outline-evidence-pack.schema.md  strict-text-fixture-receipt.schema.md  strict-text-fixture.schema.md  strict-text-probe-policy.schema.md  text-0123.outline-evidence.geordi.json  text-0123.strict-text.geordi.json
fixtures/render-everywhere/strict-text/failures/: bad-line-box.strict-text.geordi.json  bad-outline-command.outline-evidence.geordi.json  bidi-rtl.text-prep.input.geordi.json  complex-script.text-prep.input.geordi.json  fallback-chain.text-prep.input.geordi.json  missing-glyph-evidence.outline-evidence.geordi.json  multiline.text-prep.input.geordi.json  unknown-glyph-evidence.outline-evidence.geordi.json  unsupported-paint.outline-evidence.geordi.json  unsupported-runtime-shaping.strict-text.geordi.json  unsupported-text-paint.strict-text.geordi.json  variable-axis.text-prep.input.geordi.json
fixtures/render-everywhere/unsupported-strict-text/: README.md  fixture.json  scene.geordi.json  scene.geordi.json.receipt
scripts/: check-doc-hygiene.mjs  check-package-name-scope.mjs  check-repo-sludge.mjs  check-test-placeholders.mjs  render-everywhere-gpvue-smoke.mjs  render-everywhere-gpvue-smoke.ts  smoke-package-exports.mjs
