[workspace]
members = ["crates/geordi-ir"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/flyingrobots/geordi"
rust-version = "1.93"
version = "0.1.0"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
missing_debug_implementations = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unused = { level = "deny", priority = -1 }
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
cargo = "deny"
complexity = "deny"
correctness = "deny"
dbg_macro = "deny"
expect_used = "deny"
missing_errors_doc = "deny"
nursery = "deny"
panic = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
