[package]
name = "native-render-everywhere"
description = "Native Rust harness for the Geordi render-everywhere fixture."
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
geordi-ir = { path = "../../crates/geordi-ir" }
geordi-mesh = { path = "../../crates/geordi-mesh" }
geordi-renderer = { path = "../../crates/geordi-renderer" }
minifb = { version = "0.28.0", default-features = false, features = ["x11"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
